[package]
name = "braid-like"
version = "0.1.0"
authors = ["Fernando Toigo <fmtoigo@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.10.1", features = ["spirv"] }
cgmath = "0.18.0"
winit = "0.22"
anyhow = "1.0.40"
image = "0.23"
bytemuck = { version = "1.4", features = [ "derive" ] }
futures = "0.3"
puffin = "0.6.0"
puffin_http = "0.3.0"
rapier2d = "0.10.1"
log = "0.4.14"
env_logger = "0.9.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"
